2007-07-02  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
	* src/dvbcut.cpp:
		"play multiple files" patch by Ralph Glasstetter.

2007-06-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp (class inbuffer):
	* src/buffer.h (class inbuffer):
		Support multiple input files.

	* src/dvbcut.cpp:
	* src/dvbcut.h:
		Open multiple input files.
		Read & write new project file format.
		Factor out pathname canonicalization.

	* src/main.cpp:
		Open multiple input files.

	* src/mpgfile.cpp:
		Use number of frames for bitrate estimation.

2007-06-29  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp (class inbuffer):
	* src/buffer.h (class inbuffer):
		Let open() return bool.
		Remove copy constructor for inbuffer.
		Add reset() member for inbuffer reuse.
 
	* src/dvbcut.h:
	* src/dvbcut.cpp:
		Add reusable inbuffer member to class dvbcut.
		Pass inbuffer to mpgfile::open().
 
	* src/main.cpp:
		Centralize option handling.
		Pass inbuffer to mpgfile::open().
 
 	* src/mpgfile.h:
 	* src/mpgfile.cpp:
 		Create mpgfile from inbuffer, not from filename.
 		Use a reference to a single inbuffer.

2007-06-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpgfile.cpp:
	* src/mpgfile.h:
	* src/psfile.cpp:
	* src/psfile.h:
	* src/tsfile.cpp:
	* src/tsfile.h:
	  Do not pass a filename to class mpgfile and its derivatives.
	  Once we support multi-file sources, a filename makes no sense
	  any longer.  We should instead pass the entire group of files
	  via a multi-file source class (e.g. a modified inbuffer).

2007-06-19  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp: suggest a name for the project file.

2007-06-19  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp: show filenames in caption.

2007-06-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/defines.h: include *.rec in DEFAULT_LOADFILTER.
