@@ -59,9 +59,9 @@ static inline int videostream(int s=0)
 #define DVBCUT_QSETTINGS_PATH "/" DVBCUT_QSETTINGS_DOMAIN "/" DVBCUT_QSETTINGS_PRODUCT "/"
 
 #define DVBCUT_DEFAULT_LOADFILTER \
-	"Recognized files (*.dvbcut *.mpg *.rec *.ts *.tts *.vdr);;" \
+	"Recognized files (*.dvbcut *.mpg *.rec* *.ts *.tts* *.vdr);;" \
 	"dvbcut project files (*.dvbcut);;" \
-	"MPEG files (*.mpg *.rec *.ts *.tts *.vdr);;" \
+	"MPEG files (*.mpg *.rec* *.ts *.tts* *.vdr);;" \
 	"All files (*)"
 #define DVBCUT_DEFAULT_IDXFILTER \
 	"dvbcut index files (*.idx);;All files (*)"
